--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <div id="div1">
                     <button id="space">SpaceX</button>
                     <div id="nav-btn">
-                        <a id="fal" href="Falcon9">FALCON 9</a>
-                        <a href="FALCON HEAVY">FALCON HEAVY</a>
-                        <a href="DRAGON">DRAGON</a>
-                        <a href="STARSHIP">STARSHIP</a>
-                        <a href="HUMAN SPACEFLIGHT">HUMAN SPACEFLIGHT</a>
-                        <a href="RIDESHARE">RIDESHARE</a>
-                        <a href="STARSHIELD">STARSHIELD</a>
-                        <a id="star" href="STARLINK">STARLINK</a>
+                        <a id="a" href="Falcon9">FALCON 9</a>
+                        <a id="b" href="#">FALCON HEAVY</a>
+                        <a id="c" href="#">DRAGON</a>
+                        <a id="d" href="#">STARSHIP</a>
+                        <a id="e" href="#">HUMAN SPACEFLIGHT</a>
+                        <a id="f" href="#">RIDESHARE</a>
+                        <a id="g" href="#">STARSHIELD</a>
+                        <a id="h" href="STARLINK">STARLINK</a>
                     </div>
                     <div id="id">
                         <a id="shop" href="SHOP"> SHOP </a>
